--- a/src/_assets/style.css
+++ b/src/_assets/style.css
@@ -14,7 +14,7 @@ $padding-left: 1rem;
 .main {
   display    : flex;
   background : url(01.jpg) no-repeat;
-  background: #000;
+  /*background: #000;*/
   padding-left: calc($padding-left / 3);
 
   &:hover {
